--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,18 +9,21 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Lab05 - API Rest</title>
+    <title>AISS - API Rest</title>
   </head>
 
   <body>
-    <h1>Hello! <br> Lab05 - API Rest </h1>
+    <h1>Hello! <br> AISS - API Rest </h1>
 	
     <table>
       <tr>
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="api/lists">PlayList_API</a></td>
+        <td><a href="api/brands">Brand_API</a></td>
+       </tr>
+       <tr>
+        <td><a href="api/phones">Phones_API</a></td>
       </tr>
     </table>
   </body>
