--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,10 +20,16 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="api/brands">Brand_API</a></td>
+        <td><a href="api/brands">Brands_API</a></td>
        </tr>
        <tr>
         <td><a href="api/phones">Phones_API</a></td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      <tr>
+        <td><a href="docs/index.html">Swagger</a></td>
       </tr>
     </table>
   </body>
