--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,27 +10,57 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>AISS - API Rest</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <h1>Hello! <br> AISS - API Rest </h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="api/brands">Brands_API</a></td>
-       </tr>
-       <tr>
-        <td><a href="api/phones">Phones_API</a></td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      <tr>
-        <td><a href="docs/index.html">Swagger</a></td>
-      </tr>
-    </table>
+  <header id="cabecera">
+    <h1>Marcas y teléfonos</h1>
+    <nav> 
+      <ul>
+        <li>
+          <a href="api/brands">Brands_API</a>
+        </li>
+        <li>
+          <a href="api/phones">Phones_API</a>
+        </li>
+        <li>
+          <a href="docs/index.html">Swagger</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="clearfix"></div>
+  </header>
+  <table id="developers">
+    <tr id="dev">
+      <td>Desarrolladores</td>
+      <td>Contactos</td>
+    </tr>
+    <tr>
+      <td>Jose Manuel Martin Luque</td>
+      <td>josemanuelmartinluque@outlook.com</td>
+    </tr>
+    <tr>
+      <td>Rafael Estrada Ornedo</td>
+      <td>rafaestrada3@gmail.com</td>
+    </tr>
+    <tr>
+      <td>Juan José Casamitjana Benítez</td>
+      <td>juanjosecasamitjanab7@gmail.com</td>
+    </tr>
+    <tr>
+      <td>Jesús Ballestero López</td>
+      <td>placeHolder4@domain.com</td>
+    </tr>
+    <tr>
+      <td>Jose Luis Pérez Santacruz</td>
+      <td>joseluissfc4@gmail.com</td>
+    </tr>
+
+  </table>
+
+
+    <footer>
+      <h2>AISS - API Rest </h2>
+    </footer>
   </body>
 </html>
