--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
     </tr>
     <tr>
       <td>Jesús Ballestero López</td>
-      <td>placeHolder4@domain.com</td>
+      <td>ballestero20017@gmail.com</td>
     </tr>
     <tr>
       <td>Jose Luis Pérez Santacruz</td>
